--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.1",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
+    "progress": "^2.0.3",
     "uuid": "^11.0.3"
   }
 }
