--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "nodejs",
   "version": "1.0.0",
-  "main": "mysql.js",
+  "main": "mogodb.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon mysql.js"
+    "start": "nodemon mogodb.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-handlebars": "^8.0.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
     "mysql": "^2.18.1",
+    "path": "^0.12.7",
     "progress": "^2.0.3",
     "uuid": "^11.0.3"
   }
