--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@handlebars/allow-prototype-access": "^1.0.5",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "exphbs": "^1.2.0",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
+    "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
+    "ping": "^0.4.4",
     "progress": "^2.0.3",
     "uuid": "^11.0.3"
   }
