--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
     "ping": "^0.4.4",
