--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@handlebars/allow-prototype-access": "^1.0.5",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "bootstrap": "^5.3.3",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
