--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.18.1",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongodb": "^6.11.0",
