--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "jquery": "^3.7.1",
+    "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongodb": "^6.11.0",
