--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "build": "NODE_ENV=production next build"
   },
   "keywords": [],
   "author": "",
@@ -36,9 +37,11 @@
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "ping": "^0.4.4",
     "progress": "^2.0.3",
+    "shortid": "^2.2.17",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
