--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "node-fetch": "^2.7.0",
     "path": "^0.12.7",
     "ping": "^0.4.4",
     "progress": "^2.0.3",
+    "shortid": "^2.2.17",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
