--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - master
+    paths:
+      - .env
 
 jobs:
   build:
@@ -24,6 +26,17 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+      - run: |
+          npm install -g vercel
+          echo "VERCEL_ORG_ID=${{ secrets.VERCEL_ORG_ID }}" >> .env
+          echo "VERCEL_PROJECT_ID=${{ secrets.VERCEL_PROJECT_ID }}" >> .env
+          vercel login --token ${{ secrets.VERCEL_TOKEN }}
+          npx vercel env pull .env.local
+          cat .env | grep -v '^#' | while read line; do
+            key=$(echo $line | cut -d '=' -f 1)
+            value=$(echo $line | cut -d '=' -f 2-)
+            vercel env add $key production $value
+          done
       - run: npm ci
       - run: npm run build --if-present
     # - run: npm test
