--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,11 +4,12 @@
 name: Node.js CI
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
     paths:
-      - .env
+      - .env.local
 
 jobs:
   build:
