--- a/.github/workflows/vercel-env-sync.yml
+++ b/.github/workflows/vercel-env-sync.yml
@@ -2,7 +2,7 @@ name: Sync .env to Vercel
 
 on:
   push:
-    branches: [main] # or your default branch
+    branches: [master] # or your default branch
 
 jobs:
   deploy:
