--- a/.github/workflows/vercel-env-sync.yml
+++ b/.github/workflows/vercel-env-sync.yml
@@ -15,6 +15,10 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
 
+      - name: Write .env file from GitHub Secret
+        run: |
+          echo "${{ secrets.VERCEL_ENV_FILE }}" > .env.local
+
       - name: Sync .env variables to Vercel
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
