--- a/.github/workflows/vercel-env-sync.yml
+++ b/.github/workflows/vercel-env-sync.yml
@@ -25,7 +25,6 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       - run: |
-          npm install -g vercel
           echo "VERCEL_ORG_ID=${{ secrets.VERCEL_ORG_ID }}" >> .env
           echo "VERCEL_PROJECT_ID=${{ secrets.VERCEL_PROJECT_ID }}" >> .env
           vercel login --token ${{ secrets.VERCEL_TOKEN }}
@@ -35,3 +34,5 @@ jobs:
               value=$(echo $line | cut -d '=' -f 2-)
               vercel env add --name "$key" --environment production --value "$value" --yes
           done
+      - run: npm ci
+      - run: npm run build --if-present
